# academic-commercialization-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  app.py  benchmark.py  benchmark_check.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: README.md  car-t-therapy-solid-tumors.md  perovskite-solar-cells-bipv.md  solid-state-batteries-ev.md
examples/car-t-solid-tumors/: commercialization_report.md  commercialization_scores.json  reviewer_notes.md
src/academic_agent/: crew.py  evidence.py  language.py  llm_config.py  main.py  pdf_extractor.py  pipeline_worker.py  run_output.py  source_clients.py  source_pipeline.py
src/academic_agent/config/: agents.yaml  tasks.yaml
tests/: test_crew_wiring.py  test_evidence.py  test_guardrail_integration.py  test_i18n.py  test_language.py  test_llm_config.py  test_new_features.py  test_pdf_extractor.py  test_run_output.py  test_source_clients.py  test_source_pipeline.py  test_ui_html.py  test_ui_run_reader.py
ui/: history.py  html_misc.py  html_progress.py  html_scorecard.py  html_sources.py  i18n.py  pdf_export.py  run_reader.py  runner.py  ui.py
