[project]
name = "academic_agent"
version = "1.0.0"
description = "Academic research commercialization assessment agent built with CrewAI"
authors = [{ name = "Jason Chai", email = "shuxiachai@163.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "gradio>=6.19.0",
    "langdetect>=1.0.9",
    "markdown>=3.6",
    "pydantic>=2.0",
    "pypdfium2>=4.0",
    "reportlab>=4.0",
    "xhtml2pdf>=0.2.16",
]

[project.scripts]
academic_agent = "academic_agent.main:run"
run_crew = "academic_agent.main:run"
train = "academic_agent.main:train"
replay = "academic_agent.main:replay"
test = "academic_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
